2008-08-13  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_exception.c: support new statuses appeared since
	cairo 1.7.2.

	* src/rb_cairo.c (Cairo.satisfied_version?): add.

	* test/test_exception.rb: add.

	* test/cairo-test-utils.rb: add.

	* test/run-test.rb: use Test::Unit 2.x.

	* test-unit: imported Test::Unit 2.x.

2008-08-11  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_context.rb: add.

	* test/run-test.rb: don't use at_exit test runner because rcairo
	uses at_exit based GC guard mechanism.

	* src/rb_cairo_context.c: free all alive Cairo::Context before
	stop GC like Cairo::Surface.

	* src/rb_cairo_private.[ch]: abstract explicit free before stop GC
	used by Cairo::Surface.

	* src/rb_cairo_surface.c: use abstracted explicit free before stop
	GC.

2008-08-06  Kouhei Sutou  <kou@cozmixng.org>

	* README: update sample scripts dependency description.
	Suggested by Davide Rambaldi.

	* README: add a Davide Rambaldi's entry.

2008-08-02  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_surface.c: handle unknown surface type as
	Cairo::Surface.

	* src/rb_cairo_surface.c: add Cairo::Surface#destroy.

	* README: update Paul van Tilburg's entry.

	* extconf.rb: check ruby/st.h availability.
	Suggested by Paul van Tilburg.

	* src/rb_cairo_surface.c: use HAVE_RUBY_ST_H.

2008-07-29  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c: export Cairo::Context#destroy.

2008-07-21  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c (cr_set_source_generic): accept surface
	without width and height.

2008-07-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo.c: 1.6.3 -> 1.7.0.

	* NEWS: add a new entry for 1.6.3.

	* src/rb_cairo.c: 1.7.0 -> 1.6.3.

2008-06-20  Kouhei Sutou  <kou@cozmixng.org>

	* README: update OBATA Akio's entry.

	* src/depend (install-so): use INSTALL_DATA and RUBYARCHDIR.
	Suggested by OBATA Akio. Thanks!!!

	* pkg-config.rb: add libdata.

	* pkg-config.rb:
	- add /opt/local/lib/pkgconfig as default path.