@@ -48,6 +48,7 @@ EXPORTS
     rb_mCairo_Filter          DATA
     rb_mCairo_SVGVersion      DATA
     rb_mCairo_PSLevel         DATA
+    rb_mCairo_LCDFilter       DATA
 
     rb_mCairo_Color           DATA
     rb_cCairo_Color_Base      DATA
